--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <title>Dias Zakir</title>
   </head>
   <body>
-    <header>
-      <a href="./index.html">Dias Zakir</a>
+    <header class="portfolio portfolio-header">
+      <a href="./index.html" class="portfolio portfolio-user">Dias Zakir</a>
       <nav>
         <a href="#">About me</a>
-        <a href="#">Stack</a>
-        <a href="#">Projects</a>
-        <a href="#">Contacts</a>
+        <a href="#stack">Stack</a>
+        <a href="#projects">Projects</a>
+        <a href="#contacts">Contacts</a>
       </nav>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+      <p>Dias Zakir | 2025</p>
+      <a href="mailto:diaszakir1@outlook.com">Email</a>
+      <a href="https://t.me/diko_skk" , target="_blank">Telegram</a>
+    </footer>
   </body>
 </html>
