--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
     <header class="portfolio portfolio-header">
       <a href="./index.html" class="portfolio portfolio-user">Dias Zakir</a>
       <nav>
-        <a href="#">About me</a>
+        <a href="#about">About me</a>
         <a href="#stack">Stack</a>
         <a href="#projects">Projects</a>
         <a href="#contacts">Contacts</a>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section id="about">
+        <h1>Hello, my name is Dias Zakir</h1>
+        <h3>I'm a Python Backend Developer</h3>
+        <p>
+          I'm interested about in creating scalable systems and applications
+          using FastAPI and Django Frameworks.
+        </p>
+        <p><em>Video in future</em></p>
+      </section>
+    </main>
     <footer>
       <p>Dias Zakir | 2025</p>
       <a href="mailto:diaszakir1@outlook.com">Email</a>
