--- a/index.html
+++ b/index.html
@@ -25,6 +25,65 @@
         </p>
         <p><em>Video in future</em></p>
       </section>
+      <section id="stack">
+        <h2>My stack:</h2>
+        <div class="stack programming-languages">
+          <h3>Programming Languages:</h3>
+          <ul>
+            <li>Python</li>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>Golang</li>
+          </ul>
+        </div>
+        <div class="stack frontend">
+          <h3>Frontend</h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Figma</li>
+            <li>React.js</li>
+          </ul>
+        </div>
+        <div class="stack backend">
+          <h3>Backend</h3>
+          <ul>
+            <li>FastAPI</li>
+            <li>Django</li>
+            <li>Flask</li>
+            <li>Pytest</li>
+            <li>Node.js</li>
+            <li>PostgreSQL</li>
+            <li>MongoDB</li>
+            <li>Redis</li>
+          </ul>
+        </div>
+      </section>
+      <section id="projects">
+        <h1>Projects will be displayed soon...</h1>
+      </section>
+      <section id="contacts">
+        <h1>Contacts</h1>
+        <p>
+          Email:
+          <a href="mailto:diaszakir1@outlook.com">diaszakir1@outlook.com</a>
+        </p>
+        <p>
+          Telegram:
+          <a href="https://t.me/diko_skk" , target="_blank">@diko_skk</a>
+        </p>
+        <p>
+          Github:
+          <a href="https://github.com/diaszakir">diaszakir</a>
+        </p>
+        <p>
+          Linkeldin:
+          <a href="https://www.linkedin.com/in/dias-zakir-51261b296/"
+            >Dias Zakir</a
+          >
+        </p>
+        <p></p>
+      </section>
     </main>
     <footer>
       <p>Dias Zakir | 2025</p>
