--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dias Zakir</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="portfolio portfolio-header">
       <a href="./index.html" class="portfolio portfolio-user">Dias Zakir</a>
-      <nav>
-        <a href="#about">About me</a>
-        <a href="#stack">Stack</a>
-        <a href="#projects">Projects</a>
-        <a href="#contacts">Contacts</a>
+      <nav class="portfolio-naviagation">
+        <a class="portfolio portfolio-link" href="#about">About me</a>
+        <a class="portfolio portfolio-link" href="#stack">Stack</a>
+        <a class="portfolio portfolio-link" href="#projects">Projects</a>
+        <a class="portfolio portfolio-link" href="#contacts">Contacts</a>
       </nav>
     </header>
     <main>
@@ -82,7 +83,9 @@
             >Dias Zakir</a
           >
         </p>
-        <p></p>
+        <p>You can contact me:</p>
+        <input type="email" placeholder="Type your email" />
+        <input type="textarea" placeholder="Type your message" />
       </section>
     </main>
     <footer>
