--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="portfolio-header">
       <div class="portfolio-header-inner">
-        <a href="./index.html" class="portfolio portfolio-user">Dias Zakir</a>
+        <a href="./index.html" class="portfolio portfolio-link">Dias Zakir</a>
         <nav class="portfolio-naviagation">
           <a class="portfolio-link" href="#about">About me</a>
           <a class="portfolio-link" href="#stack">Stack</a>
