adding additional info 1

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             <li>Java</li>
             <li>JavaScript</li>
             <li>Golang</li>
+            <li>Dart</li>
+            <li>Kotlin</li>
           </ul>
         </div>
         <div class="stack frontend">
@@ -65,6 +67,25 @@
             <li>PostgreSQL</li>
             <li>MongoDB</li>
             <li>Redis</li>
+          </ul>
+        </div>
+        <div class="stack data-science-ml">
+          <h3>Data Science/Machine Learning</h3>
+          <ul>
+            <li>Pandas</li>
+            <li>Matplotlib</li>
+            <li>NumPy</li>
+            <li>Scikit-learn</li>
+            <li>PyTorch</li>
+            <li>TenserFlow</li>
+          </ul>
+        </div>
+        <div class="stack mobile">
+          <h3>Mobile</h3>
+          <ul>
+            <li>Android Studio</li>
+            <li>Flutter</li>
+            <li>React Native</li>
           </ul>
         </div>
       </section>
