about me version 1

--- a/index.html
+++ b/index.html
@@ -25,16 +25,32 @@
       </div>
     </header>
     <main class="portfolio-main">
-      <section id="about" class="about">
-        <h1>Hello, my name is Dias Zakir</h1>
-        <h3>I'm a Python Backend Developer</h3>
-        <p>
-          I'm interested about in creating scalable systems and applications
-          using FastAPI and Django Frameworks.
-        </p>
-        <p><em>Video in future</em></p>
+      <section id="about" class="about-me">
+        <div>
+          <h1>Hello, my name is Dias Zakir</h1>
+          <h3>I'm a Python Backend Developer</h3>
+          <p>
+            I'm interested about in creating scalable systems and applications
+            using FastAPI and Django Frameworks.
+          </p>
+        </div>
+        <div>
+          <p><em>Фото в полный рост добавить потом</em></p>
+        </div>
       </section>
-      <section id="stack" class="stack">
+      <section class="about-video">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/yUrC5R30Ofk?si=EZ1zZe0PFsxFmBfD"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </section>
+      <section id="stack" class="about-stack">
         <h2>Stack</h2>
         <div class="stack programming-languages">
           <h3>Programming Languages:</h3>
@@ -64,6 +80,11 @@
             <li>Flask</li>
             <li>Pytest</li>
             <li>Node.js</li>
+          </ul>
+        </div>
+        <div class="stack databases">
+          <h3>Databases</h3>
+          <ul>
             <li>PostgreSQL</li>
             <li>MongoDB</li>
             <li>Redis</li>
@@ -89,10 +110,10 @@
           </ul>
         </div>
       </section>
-      <section id="projects">
+      <section id="projects" class="about-projects">
         <h1>Projects will be displayed soon...</h1>
       </section>
-      <section id="contacts">
+      <section id="contacts" class="about-contacts">
         <h1>Contacts</h1>
         <p>
           Email:
