--- a/index.html
+++ b/index.html
@@ -52,62 +52,64 @@
       </section>
       <section id="stack" class="about-stack">
         <h2>Stack</h2>
-        <div class="stack programming-languages">
-          <h3>Programming Languages:</h3>
-          <ul>
-            <li>Python</li>
-            <li>Java</li>
-            <li>JavaScript</li>
-            <li>Golang</li>
-            <li>Dart</li>
-            <li>Kotlin</li>
-          </ul>
-        </div>
-        <div class="stack frontend">
-          <h3>Frontend</h3>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Figma</li>
-            <li>React.js</li>
-          </ul>
-        </div>
-        <div class="stack backend">
-          <h3>Backend</h3>
-          <ul>
-            <li>FastAPI</li>
-            <li>Django</li>
-            <li>Flask</li>
-            <li>Pytest</li>
-            <li>Node.js</li>
-          </ul>
-        </div>
-        <div class="stack databases">
-          <h3>Databases</h3>
-          <ul>
-            <li>PostgreSQL</li>
-            <li>MongoDB</li>
-            <li>Redis</li>
-          </ul>
-        </div>
-        <div class="stack data-science-ml">
-          <h3>Data Science/Machine Learning</h3>
-          <ul>
-            <li>Pandas</li>
-            <li>Matplotlib</li>
-            <li>NumPy</li>
-            <li>Scikit-learn</li>
-            <li>PyTorch</li>
-            <li>TenserFlow</li>
-          </ul>
-        </div>
-        <div class="stack mobile">
-          <h3>Mobile</h3>
-          <ul>
-            <li>Android Studio</li>
-            <li>Flutter</li>
-            <li>React Native</li>
-          </ul>
+        <div class="stack">
+          <div class="stack-item programming-languages">
+            <h3>Programming Languages:</h3>
+            <ul>
+              <li>Python</li>
+              <li>Java</li>
+              <li>JavaScript</li>
+              <li>Golang</li>
+              <li>Dart</li>
+              <li>Kotlin</li>
+            </ul>
+          </div>
+          <div class="stack-item frontend">
+            <h3>Frontend</h3>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Figma</li>
+              <li>React.js</li>
+            </ul>
+          </div>
+          <div class="stack-item backend">
+            <h3>Backend</h3>
+            <ul>
+              <li>FastAPI</li>
+              <li>Django</li>
+              <li>Flask</li>
+              <li>Pytest</li>
+              <li>Node.js</li>
+            </ul>
+          </div>
+          <div class="stack-item databases">
+            <h3>Databases</h3>
+            <ul>
+              <li>PostgreSQL</li>
+              <li>MongoDB</li>
+              <li>Redis</li>
+            </ul>
+          </div>
+          <div class="stack-item data-science-ml">
+            <h3>Data Science/Machine Learning</h3>
+            <ul>
+              <li>Pandas</li>
+              <li>Matplotlib</li>
+              <li>NumPy</li>
+              <li>Scikit-learn</li>
+              <li>PyTorch</li>
+              <li>TenserFlow</li>
+            </ul>
+          </div>
+          <div class="stack-item mobile">
+            <h3>Mobile</h3>
+            <ul>
+              <li>Android Studio</li>
+              <li>Flutter</li>
+              <li>React Native</li>
+            </ul>
+          </div>
         </div>
       </section>
       <section id="projects" class="about-projects">
