--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h2>Stack</h2>
         <div class="stack">
           <div class="stack-item programming-languages">
-            <h3>Programming Languages:</h3>
+            <h3>Programming Languages</h3>
             <ul>
               <li>Python</li>
               <li>Java</li>
