project sample and layout

--- a/index.html
+++ b/index.html
@@ -113,7 +113,16 @@
         </div>
       </section>
       <section id="projects" class="about-projects">
-        <h1>Projects will be displayed soon...</h1>
+        <h2>Projects</h2>
+        <div class="project">
+          <div class="project-item">
+            <p>project image</p>
+            <h3>Project Name</h3>
+            <p>Project Description</p>
+            <a href="project-demo">Link</a>
+            <a href="project-repo">GitHub</a>
+          </div>
+        </div>
       </section>
       <section id="contacts" class="about-contacts">
         <h1>Contacts</h1>
