--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main class="portfolio-main">
       <section id="about" class="about-me">
-        <div>
+        <div class="about-description">
           <h1>Hello, my name is Dias Zakir</h1>
           <h3>I'm a Python Backend Developer</h3>
           <p>
@@ -34,7 +34,7 @@
             using FastAPI and Django Frameworks.
           </p>
         </div>
-        <div>
+        <div class="about-photo">
           <p><em>Фото в полный рост добавить потом</em></p>
         </div>
       </section>
