projects template creation

--- a/index.html
+++ b/index.html
@@ -122,6 +122,41 @@
             <a href="project-demo">Link</a>
             <a href="project-repo">GitHub</a>
           </div>
+          <div class="project-item">
+            <p>project image</p>
+            <h3>Project Name</h3>
+            <p>Project Description</p>
+            <a href="project-demo">Link</a>
+            <a href="project-repo">GitHub</a>
+          </div>
+          <div class="project-item">
+            <p>project image</p>
+            <h3>Project Name</h3>
+            <p>Project Description</p>
+            <a href="project-demo">Link</a>
+            <a href="project-repo">GitHub</a>
+          </div>
+          <div class="project-item">
+            <p>project image</p>
+            <h3>Project Name</h3>
+            <p>Project Description</p>
+            <a href="project-demo">Link</a>
+            <a href="project-repo">GitHub</a>
+          </div>
+          <div class="project-item">
+            <p>project image</p>
+            <h3>Project Name</h3>
+            <p>Project Description</p>
+            <a href="project-demo">Link</a>
+            <a href="project-repo">GitHub</a>
+          </div>
+          <div class="project-item">
+            <p>project image</p>
+            <h3>Project Name</h3>
+            <p>Project Description</p>
+            <a href="project-demo">Link</a>
+            <a href="project-repo">GitHub</a>
+          </div>
         </div>
       </section>
       <section id="contacts" class="about-contacts">
