--- a/index.html
+++ b/index.html
@@ -38,18 +38,9 @@
           <p><em>Фото в полный рост добавить потом</em></p>
         </div>
       </section>
-      <section class="about-video">
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/yUrC5R30Ofk?si=EZ1zZe0PFsxFmBfD"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
-      </section>
+      <!-- <section class="about-video">
+        <i>Video will be added...</i>
+      </section> -->
       <section id="stack" class="about-stack">
         <h2>Stack</h2>
         <div class="stack">
@@ -160,29 +151,58 @@
         </div>
       </section>
       <section id="contacts" class="about-contacts">
-        <h1>Contacts</h1>
-        <p>
-          Email:
-          <a href="mailto:diaszakir1@outlook.com">diaszakir1@outlook.com</a>
-        </p>
-        <p>
-          Telegram:
-          <a href="https://t.me/diko_skk" , target="_blank">@diko_skk</a>
-        </p>
-        <p>
-          Github:
-          <a href="https://github.com/diaszakir">diaszakir</a>
-        </p>
-        <p>
-          Linkeldin:
-          <a href="https://www.linkedin.com/in/dias-zakir-51261b296/"
-            >Dias Zakir</a
+        <h2>Contacts</h2>
+        <div class="contact">
+          <a
+            href="mailto:diaszakir1@outlook.com"
+            target="_blank"
+            class="contact-card"
           >
-        </p>
-        <p>You can contact me:</p>
+            <img
+              src="static/email-mail-svgrepo-com.svg"
+              alt="email-icon"
+              class="contact-img"
+            />
+            <p>Email</p>
+          </a>
+          <a href="https://t.me/diko_skk" target="_blank" class="contact-card">
+            <img
+              src="static/telegram-svgrepo-com.svg"
+              alt="telegram-icon"
+              class="contact-img"
+            />
+            <p>Telegram</p>
+          </a>
+          <a
+            href="https://github.com/diaszakir"
+            target="_blank"
+            class="contact-card"
+          >
+            <img
+              src="static/github-svgrepo-com.svg"
+              alt="github-icon"
+              class="contact-img"
+            />
+            <p>Github</p>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/dias-zakir-51261b296/"
+            target="_blank"
+            class="contact-card"
+          >
+            <img
+              src="static/linkedin-svgrepo-com.svg"
+              alt="linkedin-icon"
+              class="contact-img"
+            />
+            <p>Linkedin</p>
+          </a>
+        </div>
+        <!-- WILL BE ADDED IN NEXT VERSIONS WITH BACKEND -->
+        <!-- <p>You can contact me:</p>
         <input type="email" placeholder="Type your email" required />
         <input type="textarea" placeholder="Type your message" required />
-        <button type="submit">Submit</button>
+        <button type="submit">Submit</button> -->
       </section>
     </main>
     <footer class="portfolio-footer">
