--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
       </section> -->
       <section id="contacts" class="about-contacts">
-        <h2>Contacts</h2>
+        <h2>Socials</h2>
         <div class="contact">
           <a
             href="mailto:diaszakir1@outlook.com"
@@ -183,7 +183,7 @@
               alt="github-icon"
               class="contact-img"
             />
-            <p>Github</p>
+            <p>GitHub</p>
           </a>
           <a
             href="https://www.linkedin.com/in/dias-zakir-51261b296/"
@@ -195,7 +195,7 @@
               alt="linkedin-icon"
               class="contact-img"
             />
-            <p>Linkedin</p>
+            <p>Linkedln</p>
           </a>
         </div>
         <!-- WILL BE ADDED IN NEXT VERSIONS WITH BACKEND -->
