--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <body>
     <header class="portfolio-header">
       <div class="portfolio-header-inner">
-        <a href="./index.html" class="portfolio portfolio-link">Dias Zakir</a>
+        <a
+          href="./index.html"
+          class="portfolio portfolio-link"
+          id="portfolio-link"
+          >Dias Zakir</a
+        >
         <nav class="portfolio-naviagation">
           <a class="portfolio-link" href="#about">About me</a>
           <a class="portfolio-link" href="#stack">Stack</a>
@@ -206,9 +211,15 @@
       </section>
     </main>
     <footer class="portfolio-footer">
-      <p>Dias Zakir | 2025</p>
-      <a href="mailto:diaszakir1@outlook.com">Email</a>
-      <a href="https://t.me/diko_skk" target="_blank">Telegram</a>
+      <div>
+        <nav>
+          <a href="#about">About</a>
+          <a href="#stack">Stack</a>
+          <a href="#projects">Projects</a>
+          <a href="#contacts">Contact</a>
+        </nav>
+        <p>© 2026 Dias Zakir</p>
+      </div>
     </footer>
   </body>
 </html>
