base site without design

--- a/index.html
+++ b/index.html
@@ -35,21 +35,12 @@
           </p>
         </div>
         <div class="about-photo">
-          <p><em>Фото в полный рост добавить потом</em></p>
+          <p><em>Photo</em></p>
         </div>
       </section>
-      <section class="about-video">
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/yUrC5R30Ofk?si=EZ1zZe0PFsxFmBfD"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
-      </section>
+      <!-- <section class="about-video">
+        
+      </section> -->
       <section id="stack" class="about-stack">
         <h2>Stack</h2>
         <div class="stack">
@@ -59,9 +50,9 @@
               <li>Python</li>
               <li>Java</li>
               <li>JavaScript</li>
-              <li>Golang</li>
-              <li>Dart</li>
-              <li>Kotlin</li>
+              <!-- <li>Golang</li> -->
+              <!-- <li>Dart</li> -->
+              <!-- <li>Kotlin</li> -->
             </ul>
           </div>
           <div class="stack-item frontend">
@@ -69,8 +60,8 @@
             <ul>
               <li>HTML</li>
               <li>CSS</li>
-              <li>Figma</li>
-              <li>React.js</li>
+              <!-- <li>Figma</li> -->
+              <!-- <li>React.js</li> -->
             </ul>
           </div>
           <div class="stack-item backend">
@@ -88,7 +79,7 @@
             <ul>
               <li>PostgreSQL</li>
               <li>MongoDB</li>
-              <li>Redis</li>
+              <!-- <li>Redis</li> -->
             </ul>
           </div>
           <div class="stack-item data-science-ml">
@@ -97,9 +88,9 @@
               <li>Pandas</li>
               <li>Matplotlib</li>
               <li>NumPy</li>
-              <li>Scikit-learn</li>
-              <li>PyTorch</li>
-              <li>TenserFlow</li>
+              <!-- <li>Scikit-learn</li> -->
+              <!-- <li>PyTorch</li> -->
+              <!-- <li>TenserFlow</li> -->
             </ul>
           </div>
           <div class="stack-item mobile">
@@ -107,12 +98,12 @@
             <ul>
               <li>Android Studio</li>
               <li>Flutter</li>
-              <li>React Native</li>
+              <!-- <li>React Native</li> -->
             </ul>
           </div>
         </div>
       </section>
-      <section id="projects" class="about-projects">
+      <!-- <section id="projects" class="about-projects"> -->
         <h2>Projects</h2>
         <div class="project">
           <div class="project-item">
