--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
         </div>
       </section>
-      <!-- <section id="projects" class="about-projects"> -->
+      <!-- <section id="projects" class="about-projects">
         <h2>Projects</h2>
         <div class="project">
           <div class="project-item">
@@ -149,7 +149,7 @@
             <a href="project-repo">GitHub</a>
           </div>
         </div>
-      </section>
+      </section> -->
       <section id="contacts" class="about-contacts">
         <h1>Contacts</h1>
         <p>
