--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
       </section> -->
       <section id="contacts" class="about-contacts">
-        <h2>Socials</h2>
+        <h2>Contacts</h2>
         <div class="contact">
           <a
             href="mailto:diaszakir1@outlook.com"
