--- a/index.html
+++ b/index.html
@@ -1,114 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dias Zakir</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anton&family=Arimo:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header class="portfolio-header">
-      <div class="portfolio-header-inner">
-        <a
-          href="./index.html"
-          class="portfolio portfolio-link"
-          id="portfolio-link"
-          >Dias Zakir</a
-        >
-        <nav class="portfolio-naviagation">
-          <a class="portfolio-link" href="#about">About me</a>
-          <a class="portfolio-link" href="#stack">Stack</a>
-          <a class="portfolio-link" href="#projects">Projects</a>
-          <a class="portfolio-link" href="#contacts">Contacts</a>
-        </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dias Zakir</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Anton&family=Arimo:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header class="portfolio-header">
+    <div class="portfolio-header-inner">
+      <a href="./index.html" class="portfolio portfolio-link" id="portfolio-link">Dias Zakir</a>
+      <nav class="portfolio-naviagation">
+        <a class="portfolio-link" href="#about">About me</a>
+        <a class="portfolio-link" href="#stack">Stack</a>
+        <a class="portfolio-link" href="#projects">Projects</a>
+        <a class="portfolio-link" href="#contacts">Contacts</a>
+      </nav>
+    </div>
+  </header>
+  <main class="portfolio-main">
+    <section id="about" class="about-me">
+      <div class="about-description">
+        <h1>Hello, my name is Dias Zakir</h1>
+        <h3>I'm a Go/Python Backend Developer</h3>
+        <p>
+          I'm interested about in creating scalable systems and applications
+          using Python (FastAPI and Django) and Golang (net/http and Gin).
+        </p>
       </div>
-    </header>
-    <main class="portfolio-main">
-      <section id="about" class="about-me">
-        <div class="about-description">
-          <h1>Hello, my name is Dias Zakir</h1>
-          <h3>I'm a Python Backend Developer</h3>
-          <p>
-            I'm interested about in creating scalable systems and applications
-            using FastAPI and Django Frameworks.
-          </p>
-        </div>
-        <div class="about-photo">
-          <p><em>Photo</em></p>
-        </div>
-      </section>
-      <!-- <section class="about-video">
+      <div class="about-photo">
+        <img src="static/picture.jpg" alt="Dias Zakir" />
+      </div>
+    </section>
+    <!-- <section class="about-video">
         
       </section> -->
-      <section id="stack" class="about-stack">
-        <h2>Stack</h2>
-        <div class="stack">
-          <div class="stack-item programming-languages">
-            <h3>Programming Languages</h3>
-            <ul>
-              <li>Python</li>
-              <li>Java</li>
-              <li>JavaScript</li>
-              <!-- <li>Golang</li> -->
-              <!-- <li>Dart</li> -->
-              <!-- <li>Kotlin</li> -->
-            </ul>
-          </div>
-          <div class="stack-item frontend">
-            <h3>Frontend</h3>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <!-- <li>Figma</li> -->
-              <!-- <li>React.js</li> -->
-            </ul>
-          </div>
-          <div class="stack-item backend">
-            <h3>Backend</h3>
-            <ul>
-              <li>FastAPI</li>
-              <li>Django</li>
-              <li>Flask</li>
-              <li>Pytest</li>
-              <li>Node.js</li>
-            </ul>
-          </div>
-          <div class="stack-item databases">
-            <h3>Databases</h3>
-            <ul>
-              <li>PostgreSQL</li>
-              <li>MongoDB</li>
-              <!-- <li>Redis</li> -->
-            </ul>
-          </div>
-          <div class="stack-item data-science-ml">
-            <h3>Data Science/Machine Learning</h3>
-            <ul>
-              <li>Pandas</li>
-              <li>Matplotlib</li>
-              <li>NumPy</li>
-              <!-- <li>Scikit-learn</li> -->
-              <!-- <li>PyTorch</li> -->
-              <!-- <li>TenserFlow</li> -->
-            </ul>
-          </div>
-          <div class="stack-item mobile">
-            <h3>Mobile</h3>
-            <ul>
-              <li>Android Studio</li>
-              <li>Flutter</li>
-              <!-- <li>React Native</li> -->
-            </ul>
-          </div>
+    <section id="stack" class="about-stack">
+      <h2>Stack</h2>
+      <div class="stack">
+        <div class="stack-item programming-languages">
+          <h3>Programming Languages</h3>
+          <ul>
+            <li>Python</li>
+            <li>Java</li>
+            <li>Go</li>
+            <li>JavaScript</li>
+          </ul>
         </div>
-      </section>
-      <!-- <section id="projects" class="about-projects">
+        <div class="stack-item frontend">
+          <h3>Frontend</h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+        </div>
+        <div class="stack-item backend">
+          <h3>Backend</h3>
+          <ul>
+            <li>Flask</li>
+            <li>FastAPI</li>
+            <li>Django</li>
+            <li>Pytest</li>
+            <li>Postman</li>
+            <li>Docker</li>
+          </ul>
+        </div>
+        <div class="stack-item databases">
+          <h3>Databases</h3>
+          <ul>
+            <li>MySQL</li>
+            <li>PostgreSQL</li>
+            <li>MongoDB</li>
+          </ul>
+        </div>
+        <div class="stack-item vcs">
+          <h3>Version Control System</h3>
+          <ul>
+            <li>Git</li>
+            <li>GitHub</li>
+          </ul>
+        </div>
+        <div class="stack-item libraries">
+          <h3>Libraries & Tools</h3>
+          <ul>
+            <li>Pandas</li>
+            <li>NumPy</li>
+            <li>Scikit-learn</li>
+            <li>Matplotlib</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- <section id="projects" class="about-projects">
         <h2>Projects</h2>
         <div class="project">
           <div class="project-item">
@@ -155,71 +145,44 @@
           </div>
         </div>
       </section> -->
-      <section id="contacts" class="about-contacts">
-        <h2>Contacts</h2>
-        <div class="contact">
-          <a
-            href="mailto:diaszakir1@outlook.com"
-            target="_blank"
-            class="contact-card"
-          >
-            <img
-              src="static/email-mail-svgrepo-com.svg"
-              alt="email-icon"
-              class="contact-img"
-            />
-            <p>Email</p>
-          </a>
-          <a href="https://t.me/diko_skk" target="_blank" class="contact-card">
-            <img
-              src="static/telegram-svgrepo-com.svg"
-              alt="telegram-icon"
-              class="contact-img"
-            />
-            <p>Telegram</p>
-          </a>
-          <a
-            href="https://github.com/diaszakir"
-            target="_blank"
-            class="contact-card"
-          >
-            <img
-              src="static/github-svgrepo-com.svg"
-              alt="github-icon"
-              class="contact-img"
-            />
-            <p>GitHub</p>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/dias-zakir-51261b296/"
-            target="_blank"
-            class="contact-card"
-          >
-            <img
-              src="static/linkedin-svgrepo-com.svg"
-              alt="linkedin-icon"
-              class="contact-img"
-            />
-            <p>Linkedln</p>
-          </a>
-        </div>
-        <!-- WILL BE ADDED IN NEXT VERSIONS WITH BACKEND -->
-        <!-- <p>You can contact me:</p>
+    <section id="contacts" class="about-contacts">
+      <h2>Contacts</h2>
+      <div class="contact">
+        <a href="mailto:diaszakir1@outlook.com" target="_blank" class="contact-card">
+          <img src="static/email-mail-svgrepo-com.svg" alt="email-icon" class="contact-img" />
+          <p>Email</p>
+        </a>
+        <a href="https://t.me/diko_skk" target="_blank" class="contact-card">
+          <img src="static/telegram-svgrepo-com.svg" alt="telegram-icon" class="contact-img" />
+          <p>Telegram</p>
+        </a>
+        <a href="https://github.com/diaszakir" target="_blank" class="contact-card">
+          <img src="static/github-svgrepo-com.svg" alt="github-icon" class="contact-img" />
+          <p>GitHub</p>
+        </a>
+        <a href="https://www.linkedin.com/in/dias-zakir-51261b296/" target="_blank" class="contact-card">
+          <img src="static/linkedin-svgrepo-com.svg" alt="linkedin-icon" class="contact-img" />
+          <p>Linkedln</p>
+        </a>
+      </div>
+      <!-- WILL BE ADDED IN NEXT VERSIONS WITH BACKEND -->
+      <!-- <p>You can contact me:</p>
         <input type="email" placeholder="Type your email" required />
         <input type="textarea" placeholder="Type your message" required />
         <button type="submit">Submit</button> -->
-      </section>
-    </main>
-    <footer class="portfolio-footer">
-      <div>
-        <nav>
-          <a href="#about">About</a>
-          <a href="#stack">Stack</a>
-          <a href="#projects">Projects</a>
-          <a href="#contacts">Contact</a>
-        </nav>
-        <p>© 2026 Dias Zakir</p>
-      </div>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer class="portfolio-footer">
+    <div>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#stack">Stack</a>
+        <a href="#projects">Projects</a>
+        <a href="#contacts">Contact</a>
+      </nav>
+      <p>© 2026 Dias Zakir</p>
+    </div>
+  </footer>
+</body>
+
 </html>
